# tictactoe

./: CMakeLists.txt  README.md
.cache/clangd/index/: main.cpp.5199BCAB2569A6E5.idx
inc/: board.hpp
src/: board.cpp  main.cpp
